Solve content overflowing viewport
Unit "Flexbox: Landing Page Project"
- set min/max width on `.container`'s children

--- a/1_Web-Development-101/4_Flexbox/Project_Landing-Page/style.css
+++ b/1_Web-Development-101/4_Flexbox/Project_Landing-Page/style.css
@@ -40,15 +40,16 @@ span {
 
 .section {
 	/*background-color: pink;*/
-	width: 1100px;
+	/*min-width: 75%;*/
+	width: 75%;
+	max-width: 1100px;
 }
-
-nav {}
 
 .nav {
 	display: flex;
 	justify-content: space-between;
 	margin-top: 1em;
+	/*width: 1100px;*/
 }
 
 .nav-list {
@@ -63,7 +64,6 @@ ul {
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
-	/*width: 100%;*/
 	width: 360px;
 	margin: 0;
 	list-style-type: none;
@@ -102,6 +102,7 @@ header {
 .call-to-action-header {
 	flex-direction: column;
 	flex-basis: 375px;
+	margin-right: 40px;
 }
 
 
